--- a/app/src/main/res/layout/activity_p5_savings_guide4_fmt.xml
+++ b/app/src/main/res/layout/activity_p5_savings_guide4_fmt.xml
@@ -120,9 +120,10 @@
     <TextView
         android:id="@+id/descriptionLabel"
         android:layout_width="240dp"
-        android:layout_height="48dp"
-        android:inputType="text"
+        android:layout_height="78dp"
         android:textSize="12sp"
+        android:singleLine="false"
+        android:lines="5"
         app:layout_constraintEnd_toEndOf="@+id/SavingsGuide4FMTView"
         app:layout_constraintHorizontal_bias="0.436"
         app:layout_constraintStart_toStartOf="@+id/SavingsGuide4FMTView"
@@ -145,9 +146,9 @@
     <TextView
         android:id="@+id/amountDescription"
         android:layout_width="240dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="16dp"
-        android:inputType="text"
+        android:layout_height="78dp"
+        android:layout_marginTop="1dp"
+        android:singleLine="false"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="@+id/SavingsGuide4FMTView"
         app:layout_constraintHorizontal_bias="0.436"
