--- a/app/src/main/res/layout/activity_main_part5_s1.xml
+++ b/app/src/main/res/layout/activity_main_part5_s1.xml
@@ -74,4 +74,15 @@
         app:layout_constraintTop_toBottomOf="@id/FMT"
         android:layout_marginTop="20dp" />
 
+    <Button
+        android:id="@+id/backHomeButton"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
+        android:backgroundTint="@color/purple"
+        android:text="Back To Menu"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/FBSL"
+        android:layout_marginTop="20dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
